# mlFORoa

./: CMakeLists.txt  README.md  Util.hh  app  app.cc  config.cfg  construction.cc  construction.hh  plotVariaion.C
data/: flux_uncertainty.root  readyForCAF_neutrino_swap0.root
